# argodsm-exp

docs/: advanced.md  tutorial.md
src/: CMakeLists.txt  argo.cpp  argo.h  argo.hpp
src/allocators/: collective_allocator.hpp
src/backend/: backend.hpp
src/backend/mpi/: CMakeLists.txt  mpi.cpp  persistence.cpp  persistence.hpp  statistics.cpp  statistics.hpp  swdsm.cpp  swdsm.h  write_buffer.hpp
src/backend/singlenode/: singlenode.cpp
src/data_distribution/: base_distribution.hpp  cyclic_distribution.hpp  data_distribution.hpp  first_touch_distribution.hpp  global_ptr.hpp  naive_distribution.hpp  prime_mapp_distribution.hpp  skew_mapp_distribution.hpp
src/env/: env.cpp  env.hpp
src/synchronization/: cohort_lock.hpp  global_tas_lock.hpp
src/virtual_memory/: anonymous.cpp  memfd.cpp  nvm.cpp  pmem.cpp  shm.cpp  virtual_memory.hpp
tests/: CMakeLists.txt  allocators.cpp  api.cpp  backend.cpp  barrier.cpp  lock.cpp  omp.cpp  prefetch.cpp  stlallocation.cpp  uninitialized.cpp
